force-app/main/default/objects/StudentselectedAnswer__c/StudentselectedAnswer__c.object-meta.xml
<CustomObject>
    <label>StudentselectedAnswer</label>
    <nameField>
        <label>StudentselectedAnswer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>StudentselectedAnswers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>