force-app/main/default/objects/StudentselectedAnswer__c/fields/QuestionsAnswer__c.field-meta.xml
<CustomField>
    <fullName>QuestionsAnswer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>QuestionsAnswer</label>
    <referenceTo>HCK_QuestionsAnswer__c</referenceTo>
    <relationshipLabel>StudentselectedAnswers</relationshipLabel>
    <relationshipName>StudentselectedAnswers</relationshipName>
    <type>Lookup</type>
</CustomField>