force-app/main/default/objects/StudentselectedAnswer__c/fields/Quiz__c.field-meta.xml
<CustomField>
    <fullName>Quiz__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quiz</label>
    <referenceTo>HCK_Quiz__c</referenceTo>
    <relationshipLabel>StudentselectedAnswers</relationshipLabel>
    <relationshipName>StudentselectedAnswers</relationshipName>
    <type>Lookup</type>
</CustomField>