force-app/main/default/objects/StudentselectedAnswer__c/fields/Student__c.field-meta.xml
<CustomField>
    <fullName>Student__c</fullName>
    <label>Student</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>StudentselectedAnswers</relationshipLabel>
    <relationshipName>StudentselectedAnswers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>